<resources>
    <string-array name="languages">
        <item>English</item>
        <item>العربية</item>


    </string-array>
    <string name="email">Email</string>
    <string name="article">Ideas</string>
    <string name="courses">Courses</string>
    <string name="sign_out">Log Out</string>
    <string name="default_notification_channel_id" translatable="false">DEFAULT</string>
    <string name="default_notification_channel_name" translatable="false">General Notifications</string>
    <string name="community_notification_channel_id" translatable="false">reply_channel</string>
    <string name="community_notification_channel_name" translatable="false">Reply</string>
    <string name="ideas_notification_channel_id" translatable="false">like_channel</string>
    <string name="ideas_notification_channel_name" translatable="false">Likes</string>
    <string name="iideas_notification_channel_id" translatable="false">comment_channel</string>
    <string name="iideas_notification_channel_name" translatable="false">Comment</string>
    <string name="app_name">ESI better</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="action_settings">Settings</string>
    <string name="exchanging_ideas_and_n_articles_between_n_students">Exchanging ideas and  articles between   students</string>
    <string name="password">Password</string>
    <string name="please_enter_avalid_email">please , enter a valid e-mail</string>
    <string name="email_sent">email sent , please check your inbox    to reset your password</string>
    <string name="error_sending_email">error sending email , check your email   then try again</string>
    <string name="short_password">Password must be than 8 digit or more</string>
    <string name="empty_password">password should not be empty</string>
    <string name="empty_email">email should not be empty</string>
    <string name="login_successful">Login Successful</string>
    <string name="u_should_be_esist">You should be from ESI SBA to sign in</string>
    <string name="empty_name">Name should not be empty</string>
    <string name="pick_photo">Please pick a photo for your profile</string>
    <string name="name_shd_cntain_lttrs">Name should contain only letters</string>
    <string name="r_u_esist2">Are you sure , you are a \n student a ESI SBA !</string>
    <string name="pswrd_mst_matches">Password must matches</string>
    <string name="pls_pick_birth">please pick your Birthday</string>
    <string name="register_successful">register successful</string>
    <string name="cant_snd_email_vrf">error can\'t send email verification,  try again ..</string>
    <string name="logout_rst_pswrd">Do you really want to log out and reset password ?</string>
    <string name="cancel">cancel</string>
    <string name="u_wnt_logout">Do you really want to log out ?</string>
    <string name="yremail_not_vrf">your email is not verified , please try again</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="about_us">About us</string>
    <string name="settings">Settings</string>
    <string name="succes">success</string>
    <string name="failed">failed</string>
    <string name="please_describe_your_issue_here">please describe your issue here   you can illustrate it with screenshots if needed ...   and we will contact you soon ...  Respectfully .</string>
    <string name="please_pick_an_app_to_send">Please pick an app to send your report</string>
    <string name="notifications">Notifications</string>
    <string name="are_enabled">are Enabled</string>
    <string name="are_disabled">are Disabled</string>
    <string name="reset_password">Reset Password</string>
    <string name="please_enter_your_email">Please enter your Email :</string>
    <string name="done">Done</string>
    <string name="authenticatin_failed">Authentication Failed.</string>
    <string name="verify_your_email">Verify your email</string>
    <string name="we_are_team">We are team of second year of ESI-SBA students consisting of six members: \'Bendahmane Hamza,Manaa Anouar,Boussaada Moustafa,Larbaoui Nour El Imene,Bouziane Djihane Boufeldja Manel\' we decided with cooperation between us to provide our application to our fellow students where our first and main goal was to serve and facilate your studies.</string>
    <string name="help">Help</string>
    <string name="the_main_idea_of_app">The main idea of the application is considered as any student who registers in the application can publish an idea or an article about a specific topic for the school that is subject to evaluation by the rest of the students and is voted on and any idea that gets the most admiration we can suggest to the administration and embody it on the ground in School potential framework.</string>
    <string name="sharing_tutorials_n_courses">Sharing tutorials and courses :</string>
    <string name="this_idea_is_represented">This idea is represented by sharing educational videos for all levels of the school that are broadcast by the students, as any competent student in a specific subject or a specific field publishes a video for a detailed explanation and this improves the benefit and the spirit of cooperation between students.</string>
    <string name="find_astrudy_team">Find a study team to help you understand your lessons:</string>
    <string name="the_research_on_the_review">The research on the review team is very interesting for that. We proposed this idea so that the student can find a team that helps him understand, prepare and motivate. .</string>
    <string name="a_reading_community">A reading community where you can find book recomendations and feedbacks :</string>
    <string name="the_idea_is_centererd">This idea is centered on establishing a reading club where any student can participate with his colleagues in browsing various types of books, by exchanging students the books available to them .</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="forget_password">forget password ?</string>
    <string name="not_a_member">Not a Member ?</string>
    <string name="sign_up_now">sign up now</string>
    <string name="skip">SKIP</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="already_a_member">Already A Member ?</string>
    <string name="birthday">Birthday</string>
    <string name="see_more">See more</string>
    <string name="join_us">Join us</string>
    <string name="when_u_r_done_vrf">when you are done verifying your email click on the button</string>
    <string name="enter">Enter</string>
    <string name="your_name">your name</string>
    <string name="status">Status</string>
    <string name="your_status_here">Your status here</string>
    <string name="wilaya">Wilaya</string>
    <string name="save">Save</string>
    <string name="reply">Reply</string>
    <string name="notifications_for_you"> for you</string>
    <string name="notifications_shared_with_you"> shared with you</string>
    <string name="share">Share</string>
    <string name="report">Report</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="log_out">log out</string>
    <string name="our_story">OUR STORY</string>
    <string name="send_email">Send Email</string>
    <string name="choose_your_language">Please choose language</string>
    <string name="create_acc">Create Account</string>
    <string name="email_reset_pass">we have sent you an email to reset password, check your inbox </string>
    <string name="bestof">BEST OF</string>
    <string name="news">NEW</string>
    <string name="post_uploaded">Post Uploaded Successfully</string>
    <string name="post_notuploaded">failed Posting , Try again</string>
    <string name="delete_post">Delete </string>
    <string name="delete_post_title">Delete the post</string>
    <string name="are_us_sure_delte_post">Are You sure You Want To Delete Your Post</string>
    <string name="open_with">Download / open with ...</string>
    <string name="no_notification">You have no Notifications yet</string>
    <string name="st_year">st Year</string>
    <string name="nd_year">nd Year</string>
    <string name="new_comment">"New Comment from : "</string>
    <string name="it_said">" it said : "</string>
    <string name="your_post_has">"your post has "</string>
    <string name="comments">" comments ."</string>
    <string name="you_got_new_reply">"You got new reply in your comment "</string>
    <string name="from">" from : "</string>
    <string name="in_th_post">" in the post : "</string>
    <string name="new_reactions">" New Reations , You got : "</string>
    <string name="dislikes">" dislikes ."</string>
    <string name="likes">" likes and "</string>
    <string name="error">ERROR :</string>
    <string name="you_can_now">You can now edit your profile</string>
    <string name="image_uploaded">"Image Uploaded "</string>
    <string name="cant_upload">can\'t upload image, try again</string>
    <string name="cant_update_prof">can\'t update your profile , try again</string>
    <string name="fields_updated_succ">"fields updated successfully "</string>
    <string name="name_not_valid">Name is not valid</string>
    <string name="name_shouldnot_empty">Name should not be empty</string>
    <string name="status_shouldbe"><![CDATA["Status should be < 20 chars "]]></string>
    <string name="status_shouldnot">Status should not be empty</string>
    <string name="deleting_video">Deleting Video!!</string>
    <string name="are_you_sure_delte_video">Are you sure you want to delete this video ?</string>
    <string name="yes">YES</string>
    <string name="no">No</string>
    <string name="are_yousre_delte_summ">Are you sure you want to delete this Summary ?</string>
    <string name="delteing_summ">Deleting Summary!!</string>
    <string name="gettiing_book">getting the summary content...</string>
    <string name="please_wait">Please wait...</string>
    <string name="go_to_sett">GO to Setting ?</string>
    <string name="no_internet_c">No Internet Connection Alert</string>
    <string name="internet_conne">Internet Connected</string>
    <string name="file_choosen">File Has been chosen</string>
    <string name="progress_uploading">uploading in progress</string>
    <string name="uploding_file">Uploading File</string>
    <string name="add_file_pl">Add a file please</string>
    <string name="add_im">Add an Image</string>
    <string name="title_shou_em">title should not be empty</string>
    <string name="tutorialq">Tutorials</string>
    <string name="summaries">Summaries</string>
    <string name="close_app">Close App !</string>
    <string name="are_you_sure_close_appp">Are you sure you want to close the app !?</string>
    <string name="desc_iss">Please describe your issue</string>
    <string name="failed_sen_rep">Failed Sending Report, Please Try Again</string>
    <string name="repo_sensucc">Report Sent Successfully, Thanks for contacting us</string>
    <string name="faile_pdf">Taking Pdf failed.</string>
    <string name="choose_year">please choose a year and module please</string>
    <string name="choose_thu">please choose a thumbnail</string>
    <string name="add_repl">ADD a Reply</string>
    <string name="ok">OK</string>
    <string name="body_emp">Body should not be empty</string>
    <string name="edit_rep">Edit Reply</string>
    <string name="edit_comm">Edit Comment</string>
    <string name="create_art">Create Article</string>
    <string name="subject">Subject...</string>
</resources>