<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_person"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_hme"
            android:onClick="openFavoris"
            android:icon="@drawable/ic_star"
            android:title="@string/favoris" />


    </group>

    <item android:title="@string/more">
        <menu tools:showIn="navigation_view">
            <item
                android:id="@+id/nav_slidehow"
                android:icon="@drawable/ic_info"
                android:onClick="openAboutUs"
                android:title="@string/about_us" />
            <item
                android:id="@+id/Help"
                android:icon="@android:drawable/ic_menu_help"
                android:onClick="openHelpLayout"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_gallry"
                android:icon="@drawable/ic_settings"
                android:onClick="openSettingsLayout"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/get_out"
                android:onClick="signOutAndgoTologin"
                android:title="@string/sign_out" />

        </menu>
    </item>
</menu>