<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/contentBodyColor"
    tools:context=".general.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <customfonts.MyTextView
            style="@style/viewParent.headerText"
            android:paddingVertical="50dp"

            android:text="@string/settings" />


        <customfonts.MyTextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:text="@string/profile" />


        <LinearLayout
            android:id="@+id/edit_profi"
            android:layout_width="match_parent"

            android:layout_height="wrap_content">

            <customfonts.MyTextView
                style="@style/viewParent.headerText.settingsTextIcon"
                android:layout_marginVertical="5dp"
                android:drawableStart="@drawable/ic_edit_profile"
                android:text="@string/edit_profile"

                />
        </LinearLayout>

        <customfonts.MyTextView
            style="@style/viewParent.headerText.settingsTextIcon"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:drawableStart="@drawable/ic_edit_password"
            android:onClick="reset_password"
            android:text="@string/change_password" />

        <customfonts.MyTextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:text="@string/more" />

        <Switch
            android:id="@+id/setNotification"
            style="@style/settingsText"
            android:checked="true"
            android:drawableStart="@drawable/ic_notifications"
            android:text="@string/notifications" />


        <customfonts.MyTextView
            style="@style/viewParent.headerText.settingsTextIcon"
            android:drawableStart="@drawable/ic_languages"
            android:onClick="changeLanguage"
            android:text="@string/language" />

        <customfonts.MyTextView
            style="@style/viewParent.headerText.settingsTextIcon"
            android:drawableStart="@drawable/ic_logout"
            android:onClick="signOutAndgoTologin"
            android:text="@string/log_out" />


    </LinearLayout>
</ScrollView>