<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical"
    tools:context=".general.HelpActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <customfonts.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/help"
            android:textColor="@android:color/black"
            android:textSize="35sp"
            android:textStyle="bold" />
        <customfonts.MyTextView
            android:id="@+id/AA_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#11CFC5"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:text="@string/exchanging_ideas_and_n_articles_between_n_students"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
        <ImageView
            android:id="@+id/aa_text_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/andr1" />

        <customfonts.MyTextView


            android:id="@+id/BB_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-light"
            android:paddingStart="16dp"
            android:text="@string/the_main_idea_of_app"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <customfonts.MyTextView


            android:id="@+id/CC_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#11CFC5"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/sharing_tutorials_n_courses"
            android:textColor="@android:color/white"
            android:textSize="20sp" />


        <ImageView
            android:id="@+id/bb_text_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/andr2" />

        <customfonts.MyTextView

            android:id="@+id/DD_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-light"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/this_idea_is_represented"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <customfonts.MyTextView


            android:id="@+id/EE_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#11CFC5"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/find_astrudy_team"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/cc_text_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/andr3" />


        <customfonts.MyTextView


            android:id="@+id/FF_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-light"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/the_research_on_the_review"
            android:textColor="@android:color/black"
            android:textSize="15sp" />


        <customfonts.MyTextView


            android:id="@+id/GG_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#11CFC5"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/a_reading_community"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/dd_text_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/andr4" />

        <customfonts.MyTextView


            android:id="@+id/HH_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dd_text_view"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif-light"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/the_idea_is_centererd"
            android:textColor="@android:color/black"
            android:textSize="15sp"

            />


        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="emailReport"
            android:text="@string/report_a_problem"
            android:textColor="#ffffff"
            app:cornerRadius="5dp"
            app:icon="@drawable/ic_info" />


    </LinearLayout>
</ScrollView>

